# sniper

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ratatelm/: Cargo.toml
ratatelm/src/: lib.rs  log.rs  main.rs  tui.rs  widgets.rs
ratatelm/src/widgets/: list.rs  mod.rs
sniper/: Cargo.toml
sniper/src/: controller.rs  main.rs  model.rs  view.rs
sniper/src/widgets/: file_entry.rs  mod.rs  search_bar.rs
src/: controller.rs  main.rs  model.rs  tui.rs  view.rs
