[package]
name = "ratatelm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["serde"]}
lazy_static = "1.4.0"
ratatui = "0.26.0"
serde_json = "1.0.114"
sysinfo = "0.30.5"
[lib]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
