[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
opener = "0.6.1"
ratatelm = {path = "../ratatelm"}
ratatui = "0.26.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
