[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["unstable-doc", "derive"] }
crossterm = "0.27.0"
lazy_static = "1.4.0"
memchr = "2.7.1"
opener = "0.6.1"
ratatelm = {path = "../ratatelm"}
ratatui = "0.26.0"
tui-input = "0.8.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
